# Simulation--GameOfLife

./: README.md  pyproject.toml
project/: config.py  constants.py  main.py  run.py
project/app/: classes.py  figures.py  generation.py  objects.py  signals.py  simulation.py  table.py  timer.py  window.py
