[tool.poetry]
name = "gameoflife"
version = "0.1.0"
description = ""
authors = ["BigBlackBob-93 <101857203+BigBlackBob-93@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "^6.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
